<resources>
    <string name="app_name" translatable="false">Pratica 4</string>
    <string name="app_name_hijo1">Números Primos</string>
    <string name="idBtn1">Números Primos</string>
    <string name="idBtn2">Juego de Aciertos</string>
    <string name="idBtn3">Desplazando Imágenes</string>
    <string name="idBtn4">Seleccionando Imágenes</string>
    <string name="idtxtentero">Intruduce un número Entero:</string>
    <string name="btnCalcular">Calcular</string>
    <string name="idtxtResultado">Mostrar si es Primo o no es Primo</string>

    <string name="España">España</string>
    <string name="Portugal">Portugal</string>
    <string name="Francia">Francia</string>
    <string name="Italia">Italia</string>
    <string name="Alemania">Alemania</string>
    <string name="Rusia">Rusia</string>
    <string name="Ucrania">Ucrania</string>
    <string name="Inglaterra">Inglaterra</string>
    <string name="Mexico">Mexico</string>
    <string name="Argentina">Argentina</string>


    <string name="Lisboa">Lisboa</string>
    <string name="Paris">Paris</string>
    <string name="Madrid">Madrid</string>
    <string name="Berlin">Berlin</string>
    <string name="Roma">Roma</string>
    <string name="Kiev">Kiev</string>
    <string name="Londres">Londres</string>
    <string name="Ciudaddemexico">Ciudad de Mexico</string>
    <string name="BuenosAires">Buenos Aires</string>
    <string name="Moscu">Moscú</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="textViewSeleccionaPaises" translatable="false">textViewPaises</string>
    <string name="textViewSeleccionaCiudad" translatable="false">textViewCiudades</string>
    <string name="uno" translatable="false">Imagen 1</string>
    <string name="dos" translatable="false">Imagen 2</string>
    <string name="tres" translatable="false">Imagen 3</string>
    <string name="cuatro" translatable="false">Imagen 4</string>
</resources>
